bat.bool1.icyhot.IcyHot.scala.error
Erreur de compilation :
IcyHot:1: error: not found: value temps2
def icyHot(temp1:Int, temp2: Int): Boolean = {if( (temp1<0 && temps2>100) ||temps2<0 && temps1>100) {return true}; else return false
                                                              ^IcyHot:1: error: not found: value temps2
def icyHot(temp1:Int, temp2: Int): Boolean = {if( (temp1<0 && temps2>100) ||temps2<0 && temps1>100) {return true}; else return false
                                                                            ^IcyHot:1: error: not found: value temps1
def icyHot(temp1:Int, temp2: Int): Boolean = {if( (temp1<0 && temps2>100) ||temps2<0 && temps1>100) {return true}; else return false
                                                                                        ^