bat.bool1.icyhot.IcyHot.scala.code
def icyHot(temp1:Int, temp2: Int): Boolean = {if( (temp1<0 && temps2>100) ||temps2<0 && temps1>100) {return true}; else return false
}